# django-practice

./: README.md  pyproject.toml
my_drf_project/: db.sqlite3  manage.py
my_drf_project/api/: models.py  serializer.py  urls.py  views.py
my_drf_project/api/migrations/: 0001_initial.py
my_drf_project/my_drf_project/: asgi.py  settings.py  urls.py  wsgi.py
myproject/myproject/: settings.py  urls.py  views.py
myproject/templates/: home.html
server/: pyproject.toml
server/api_student/: models.py  urls.py  views.py
server/server/: settings.py  urls.py
